# onnx_runtime_cpp

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  LICENSE  Makefile  README.md
.github/workflows/: build.yml
cmake/: cmake_utility.cmake  tensorrt.cmake
data/: version-RFB-640.onnx
dockerfiles/: ubuntu2004.dockerfile  ubuntu2004_gpu.dockerfile  ubuntu2004_tensorrt.dockerfile
docs/: onnxruntime_tensorrt.md
examples/: CMakeLists.txt  LISRD.cpp  LISRD.hpp  LISRDApp.cpp  LoFTR.cpp  LoFTR.hpp  LoFTRApp.cpp  MaskRCNN.cpp  MaskRCNN.hpp  MaskRCNNApp.cpp  PrimitiveTest.cpp  SemanticSegmentationPaddleSegBisenetv2.cpp  SemanticSegmentationPaddleSegBisenetv2.hpp  SemanticSegmentationPaddleSegBisenetv2App.cpp  SuperGlueApp.cpp  SuperPoint.cpp  SuperPoint.hpp  SuperPointApp.cpp  TestImageClassification.cpp  TestObjectDetection.cpp  TinyYolov2.cpp  TinyYolov2.hpp  TinyYolov2App.cpp  UltraLightFastGenericFaceDetector.cpp  UltraLightFastGenericFaceDetector.hpp  UltraLightFastGenericFaceDetectorApp.cpp  Utility.hpp  YoloX.cpp  YoloX.hpp  YoloXApp.cpp  Yolov3.cpp  Yolov3.hpp  Yolov3App.cpp
include/ort_utility/: Constants.hpp  ImageClassificationOrtSessionHandler.hpp  ImageRecognitionOrtSessionHandlerBase.hpp  ObjectDetectionOrtSessionHandler.hpp  OrtSessionHandler.hpp  Utility.hpp  ort_utility.hpp
scripts/: get_cuda_environment_variables.bash  get_tensorrt_environment_variables.bash  install_apps_dependencies.bash  install_latest_cmake.bash  install_latest_cmake.sh  install_onnx_runtime.bash  install_onnx_runtime.sh
scripts/loftr/: README.md  convert_to_onnx.py  loftr_wrapper.py  requirements.txt
scripts/superglue/: README.md  convert_to_onnx.py  superglue_wrapper.py
scripts/superpoint/: README.md  convert_to_onnx.py  requirements.txt
src/: CMakeLists.txt  ImageClassificationOrtSessionHandler.cpp  ImageRecognitionOrtSessionHandlerBase.cpp  ObjectDetectionOrtSessionHandler.cpp  OrtSessionHandler.cpp
